creates web module

--- a/blood4life-web/src/main/webapp/index.html
+++ b/blood4life-web/src/main/webapp/index.html
@@ -10,17 +10,17 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="WEB-INF/css/bootstrap.min.css">
         <style>
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
             }
         </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="WEB-INF/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="WEB-INF/css/main.css">
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="WEB-INF/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
 		<!-- facebook
@@ -54,7 +54,7 @@
 							'facebook-share-dialog', 
 							'width=626,height=436'
 						);">
-					  <img src="img/fb_share.png" style="border:none" />
+					  <img src="WEB-INF/img/fb_share.png" style="border:none" />
 					</a>
 				</div>
 			</div>
@@ -136,11 +136,11 @@
         <p>&copy; Company 2013</p>
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="WEB-INF/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="WEB-INF/js/vendor/bootstrap.min.js"></script>
 
-        <script src="js/main.js"></script>
+        <script src="WEB-INF/js/main.js"></script>
 		<!-- twitter -->
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	
