--- a/blood4life-web/src/main/webapp/facebookLogin.html
+++ b/blood4life-web/src/main/webapp/facebookLogin.html
@@ -6,7 +6,7 @@
 <body>
 
         <legend>Log In With Twitter and Facebook</legend>
-        <form id="fb_signin" action="/signin/facebook" method="POST">
+        <form id="fb_signin" action="/connect/facebook" method="POST">
             <a href="javascript:document.forms.fb_signin.submit()" title="Log In With Facebook">Log In With Facebook</a>
         </form>
 
